fixed shop url, wrapped

--- a/src/components/sections/Merch/Merch.module.css
+++ b/src/components/sections/Merch/Merch.module.css
@@ -21,6 +21,7 @@
 	justify-content: space-between;
 	width: 80%;
 	align-self: center;
+	flex-wrap: wrap;
 }
 .merchContainer {
 	display: flex;
